jekyll and bootstrap

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h2><center>Hello World!</center></h2>
+---
+layout: default
+title: hello_sapser
+---
+
+<ul>
+{% for post in site.posts %}
+  <li>
+    <h4><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h4>
+    <span>{{ post.date | date: "%b %d, %Y" }} </span>
+    {{ post.excerpt }}
+  </li>
+{% endfor %}
+</ul>
